# cement-ai

./: .env.example  .env.local.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .security-checklist.md  DEPLOYMENT.md  DIAGRAM-EXAMPLES.md  Dockerfile  INDEX.md  README.md  SECURITY.md  _navbar.md  _sidebar.md  check_tsr.py  index.html  main.py  netlify.toml  package-lock.json  package.json  pyproject.toml  quick_test.py  requirements.txt  setup.ps1  test_api.py  test_compatibility.py  test_db_connectivity.py  test_db_data.py  test_protection.py  test_response.py
app/: main.py
app/agents/: __init__.py  cement_agent.py
app/core/: __init__.py  config.py  database.py  logging_config.py  simple_protection.py  telemetry.py
app/db/: __init__.py  session.py
app/routers/: __init__.py  ai_chat.py  analytics.py  data.py  data_endpoints.py  locations.py  vision.py
backend/: api-reference.md
deployment/: cost-analysis.md  overview.md
development/: setup.md
features/: ai-chat.md
getting-started/: architecture.md  quick-start.md  repository-structure.md
reference/: environment-variables.md
scripts/: check_duplicates.py  check_schema.py  create_missing_tables.py  create_plant_locations_table.py  generate_sample_data.py  init_database_schema.py  populate_database.py  populate_plant_locations.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: cement-plant-app.tsx  telemetry-provider.tsx  timestamp.tsx
src/constants/: index.ts
src/hooks/: use-active-module.ts  use-api-data.ts  use-telemetry.ts
user-guide/: user-journey.md
(+27 files in other folders)
